# VideoPoseSampler_QT

./: .gitignore  CMakeLists.txt  README.md  VideoPoseSampler_QT.pro  calibDelay.py  icon.aps  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_ui.py  readme.md  selectresolution.cpp  selectresolution.h  selectresolution.ui  server.py
config/: AuroraConfig.ini
modules/: Configloading.cpp  Configloading.h  cameradetection.cpp  cameradetection.h  comportdetection.cpp  comportdetection.h  delaycalibration.cpp  delaycalibration.h  export.cpp  export.h  highresolutiontime.cpp  highresolutiontime.h  jsonloading.cpp  jsonloading.h  localdwpplayer.cpp  localdwpplayer.h  ndimodule.cpp  ndimodule.h  opencvframe.cpp  opencvframe.h  timestamp.cpp  timestamp.h
modules/ExptIGTLink/: export_OpenIGTLink.cpp  export_OpenIGTLink.h
